--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -15,7 +15,7 @@ jobs:
         with:
           node-version: 18
       - run: npm ci
-      - run: npm install
+      - run: npm install node-fetch
       - run: npm run main
         env:
           GLADOS: ${{ secrets.GLADOS }}
